[package]
name = "edn-format"
version = "3.2.3"
edition = "2021"
license = "MIT"
keywords = ["serialization", "serde", "edn"]
categories = ["encoding", "parser-implementations"]
include = ["/src", "Cargo.toml", "README.md", "LICENSE.txt"]
description = "Rust implementation of EDN (Extensible Data Notation)"
homepage = "https://github.com/bowbahdoe/edn-format"
repository = "https://github.com/bowbahdoe/edn-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
thiserror = "1.0.30"
nom = "7.1.1"
num-bigint = "0.4.3"
bigdecimal = "0.3.0"
